CIR-I5505 | overlaping issue fixed

--- a/src/assests/scss/_style.scss
+++ b/src/assests/scss/_style.scss
@@ -7725,7 +7725,7 @@ body {
   z-index: 1301 !important;
 
   .form-group.inputbox {
-    margin-bottom: 10px;
+    margin-bottom: 18px;
   }
 }
 
